# api/handlers/v1/client.go
@@ -7,41 +7,41 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/sirojiddin-kx/bron/api/models"
 	"github.com/sirojiddin-kx/bron/pkg/logger"
+	//"github.com/sirojiddin-kx/bron/pkg/logger"
 )
 
-//@Router /v1/company-service [post]
-//@Summary Create Company Service
-//@Description API for create company-service
-//@Tags company-service
+//@Router /v1/client [post]
+//@Summary Create Company Client
+//@Description API for creating clients
+//@Tags client
 //@Accept json
 //@Produce json
-//@Param employee body models.CompanyServiceCreate true "company-service"
+//@Param employee body models.ClientCreate true "company-service"
 //@Success 200 {object} models.SuccessModel
 //@Failure 400 {object} models.ResponseError
 //@Failure 500 {object} models.ResponseError
-func (h handlerV1) CompanyServcieCreate(c *gin.Context) {
-	var companyService models.CompanyServiceCreate
+func (h handlerV1) ClientCreate(c *gin.Context) {
+	var client models.ClientCreate
 
-	err := c.ShouldBind(&companyService)
+	err := c.ShouldBindJSON(&client)
 	if err != nil {
 		h.HandleErrorResponse(c, http.StatusBadRequest, "bad request", err)
 		return
 	}
 
-	err = h.storage.CompanyServiceRepo().Create(companyService)
+	err = h.storage.ClientRepo().Create(client)
 	if err != nil {
 		h.HandleErrorResponse(c, http.StatusInternalServerError, "database error", err)
 		return
 	}
 
-	h.HandleSuccessResponse(c, 201, "company service created successfully", "")
+	h.HandleSuccessResponse(c, 201, "client successfully created", "")
 }
 
-
-//@Router /v1/company-service [get]
-//@Summary List Company Services
-//@Description API for get list company_services
-//@Tags company-service
+//@Router /v1/clients [get]
+//@Summary List Clients
+//@Description API for get list of clients
+//@Tags client
 //@Accept json
 //@Produce json
 //@Param company_id query string true "company_id"
@@ -50,7 +50,7 @@ func (h handlerV1) CompanyServcieCreate(c *gin.Context) {
 //@Success 200 {object} models.CompanyServices
 //@Failure 400 {object} models.ResponseError
 //@Failure 500 {object} models.ResponseError
-func (h handlerV1) ListCompanyService(c *gin.Context) {
+func (h handlerV1) ListClients(c *gin.Context) {
 	var (
 		count int32
 	)
@@ -66,10 +66,10 @@ func (h handlerV1) ListCompanyService(c *gin.Context) {
 		h.HandleErrorResponse(c, http.StatusBadRequest, "can't parse page", err)
 	}
 
-	resp, err := h.storage.CompanyServiceRepo().GetCompanyServices(companyID, limit, page)
+	resp, err := h.storage.ClientRepo().GetAllClients(companyID, limit, page)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, models.ResponseError{
-			Code: models.ErrorCodeInternal,
+			Code:    models.ErrorCodeInternal,
 			Message: err.Error(),
 		})
 		h.log.Error("database err", logger.Error(err))
@@ -81,10 +81,7 @@ func (h handlerV1) ListCompanyService(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"services": resp,
-		"count": count,
+		"clients": resp,
+		"count":   count,
 	})
-
-	
 }
-
